<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="alighting_number">Alighting number</string>
    <string name="operation_schedule_receiving_html">&lt;big&gt;&lt;big&gt;Operation schedule receiving&lt;/big&gt;&lt;/big&gt;</string>
    <string name="app_name">InVehicleDevice application</string>
    <string name="arrival_schedule">Arrival schedule</string>
    <string name="departure_schedule">Departure schedule</string>
    <string name="does_it_arrive">Arrive ?</string>
    <string name="entrainment_number">Entrainment number</string>
    <string name="it_closes">Back</string>
    <string name="reservation_memo">Reservation memo</string>
    <string name="vehicle_notification_received">Vehicle notification received</string>
    <string name="user_memo">User memo</string>
    <string name="it_arrives">Arrival</string>
    <string name="it_arrives_button_text">@string/it_arrives</string>
    <string name="it_is_the_last_platform_now">Last platform now</string>
    <string name="it_leaves">Leave</string>
    <string name="it_leaves_button_text">@string/it_leaves</string>
    <string name="it_leaves_last_platform_button_text">@string/it_leaves</string>
    <string name="it_returns">Return</string>
    <string name="it_returns_to_platform_modal_view">Return to platform view</string>
    <string name="map">Map</string>
    <string name="memo">Memo</string>
    <string name="next_platform_is">Next</string>
    <string name="no">No</string>
    <string name="present_time_format">HH:mm</string>
    <string name="scroll_down">Scroll down</string>
    <string name="scroll_up">Scroll up</string>
    <string name="yes">Yes</string>
    <string name="operation_schedule_was_changed">Operation schedule was changed</string>
    <string name="cancel">Cancel</string>
    <string name="show_operation_schedule">Show operation schedule</string>
    <string name="today_operation_schedule">Today\'s operation schedule</string>
    <string name="platform_arrival_time_format">HH:mm</string>
    <string name="todays_operation_was_finished">Todays operation was finished</string>
    <string name="show_all_riding_passengers">Show all riding passengers</string>
    <string name="show_future_passengers">Show future passengers</string>
    <string name="show_missed_passengers">Show missed passengers</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="auto_zoom">Auto zoom</string>
    <string name="now_platform_is_html">Now platform is &lt;big&gt;&lt;big&gt;%s&lt;/big&gt;&lt;/big&gt;</string>
    <string name="next_platform_is_html">Next platform is &lt;big&gt;&lt;big&gt;%s&lt;/big&gt;&lt;/big&gt;</string>
    <string name="minutes_remaining_to_depart_html">%1$s出発&lt;br&gt;あと&lt;big&gt;&lt;font color=&quot;red&quot;&gt;%2$d&lt;/font&gt;&lt;/big&gt;分</string>
    <string name="platform_arrival_time">Arrival HH:mm</string>
    <string name="platform_depature_time">Departure HH:mm</string>
    <string name="location_receiving">Location receiving</string>
    <string name="gps_satellites_format">GPS satellites %1d/4</string>
    <string name="crash_toast_text">Unexpected error occured</string>
    <string name="platform_memo">Platform memo</string>
    <string name="failed_to_connect_operator_tool">Failed to connect operator tool</string>
    <string name="settings_are_not_initialized">Settings are not initialized</string>
    <string name="it_completes_getting_off">Complete</string>

</resources>