<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ModalView.Layout"
    android:orientation="vertical" >

    <Button
        android:id="@+id/operation_schedule_scroll_up_button"
        style="@style/ModalView.Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scroll_up" />

    <ListView
        android:id="@+id/operation_schedule_list_view"
        android:background="@drawable/border"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:layout_marginTop="1dip"
        android:layout_marginBottom="5dip"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <Button
        android:id="@+id/operation_schedule_scroll_down_button"
        style="@style/ModalView.Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scroll_down" />

    <Button
        android:id="@+id/schedule_close_button"
        style="@style/ModalView.Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/it_returns" />

</LinearLayout>