<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    android:paddingTop="5sp"
    android:paddingBottom="5sp"

    android:gravity="left|center"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/operation_schedule_arrival_estimate_text_view"
            android:layout_margin="0dp"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="22sp"
            android:text="@string/departure_schedule" />

        <TextView
            android:id="@+id/operation_schedule_departure_estimate_text_view"
            android:layout_width="fill_parent"
            android:layout_margin="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textSize="22sp"
            android:text="@string/arrival_schedule" />
    </LinearLayout>

    <TextView
        android:id="@+id/platform_name"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_margin="2dp"
        android:layout_weight="6"
        android:textSize="28sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1.5"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/operation_schedule_get_off_passenger_count_text_view"
            android:layout_margin="0dp"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="22sp"
            android:text="@string/alighting_number" />

        <TextView
            android:id="@+id/operation_schedule_get_on_passenger_count_text_view"
            android:layout_margin="0dp"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textSize="22sp"
            android:text="@string/entrainment_number" />
    </LinearLayout>


</LinearLayout>