<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView
        android:id="@+id/schedule_changed_modal_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/operation_schedule_was_changed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/schedule_changed_text_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/schedule_changed_modal_title_text_view"
        android:layout_above="@+id/schedule_changed_modal_buttons"
        android:background="@drawable/border"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_margin="5dip" />

    <LinearLayout
        android:id="@+id/schedule_changed_modal_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/schedule_confirm_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/show_operation_schedule" />

        <Button
            android:id="@+id/schedule_changed_close_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/it_returns" />
    </LinearLayout>

</RelativeLayout>