<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ModalView.Layout"
    android:background="@android:color/white"
    android:padding="0dip" >

    <FrameLayout
        android:id="@+id/navigation_surface_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/navigation_surface_black_flash_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="2dp"
        android:background="@android:color/white" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/battery_alert_image_view"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/battery_alert"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/next_operation_schedule_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@+id/battery_alert_image_view"
            android:background="#99FFFFFF"
            android:orientation="horizontal"
            android:padding="0dip" >

            <TextView
                android:id="@+id/next_platform_text_view"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="end"
                android:gravity="left"
                android:orientation="vertical"
                android:shadowColor="#FFFFFF"
                android:shadowDx="3.0"
                android:shadowDy="3.0"
                android:shadowRadius="0.1"
                android:singleLine="true"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/platform_arrival_time_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical"
                android:shadowColor="#FFFFFF"
                android:shadowDx="1.5"
                android:shadowDy="1.5"
                android:shadowRadius="0.1"
                android:textSize="28sp" />

            <Button
                android:id="@+id/navigation_platform_memo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memo"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gps_alert_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/next_operation_schedule_layout"
            android:background="#99FFFFFF"
            android:gravity="right|center"
            android:orientation="horizontal"
            android:padding="0dip"
            android:visibility="gone" >

            <ImageView
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:src="@drawable/gps" />

            <TextView
                android:id="@+id/gps_alert_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_receiving"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/gps_satellites_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="25sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center" >

        <Button
            android:id="@+id/navigation_close_button"
            style="@style/ModalView.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="15sp"
            android:paddingTop="15sp"
            android:text="@string/it_returns"
            android:textSize="30sp" />

        <Button
            android:id="@+id/navigation_zoom_in_button"
            style="@style/ModalView.Button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="15sp"
            android:paddingTop="15sp"
            android:text="@string/zoom_in"
            android:textSize="30sp" />

        <ToggleButton
            android:id="@+id/navigation_auto_zoom_button"
            style="@style/ModalView.Button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="1dip"
            android:layout_marginTop="1dip"
            android:layout_weight="1"
            android:textOff="@string/auto_zoom"
            android:textOn="@string/auto_zoom"
            android:textSize="30sp" />

        <Button
            android:id="@+id/navigation_zoom_out_button"
            style="@style/ModalView.Button"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="15sp"
            android:paddingTop="15sp"
            android:text="@string/zoom_out"
            android:textSize="30sp" />
    </LinearLayout>

</FrameLayout>